project/stage/tests/reject/corless_reject_tests/a2/3.2.2.b_invalid.ul
void main() {
    string s1;
    string s2;
    string s3;
    s3 = s2 - s1;

    int a;
    float b;
    float c;
    c = b - a;
}